--- a/Indonesian/main/CloudService.apk/res/values-in/plurals.xml
+++ b/Indonesian/main/CloudService.apk/res/values-in/plurals.xml
@@ -4,7 +4,7 @@
         <item quantity="other">%d dimatikan</item>
     </plurals>
     <plurals name="items_unsynced">
-        <item quantity="other">Item menunggu sinkron: %d</item>
+        <item quantity="other">%d item menunggu sinkron: </item>
     </plurals>
     <plurals name="items_waiting_to_sync">
         <item quantity="other">%d item menunggu disinkron</item>
