--- a/Indonesian/main/PersonalAssistantPlugin.apk/res/values-in/plurals.xml
+++ b/Indonesian/main/PersonalAssistantPlugin.apk/res/values-in/plurals.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="mins_ago">
-        <item quantity="other">lalu %1$dmin</item>
+        <item quantity="other">%1$dmin yang lalu</item>
     </plurals>
     <plurals name="hours_ago">
-        <item quantity="other">lalu %1$dhr</item>
+        <item quantity="other">%1$dhr yang lalu</item>
     </plurals>
     <plurals name="days_ago">
-        <item quantity="other">lalu %1$dd</item>
+        <item quantity="other">%1$dd yang lalu</item>
     </plurals>
 </resources>
